--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,13 @@
   text-decoration: none;
   background-color: transparent;
 }
+
+html, body, #root{
+  height: 100%;
+}
+
+.screen{
+  /* background-color: red; */
+  height: 100%;
+  background-color:#242424
+}
