--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,32 @@ html, body, #root{
   height: 100%;
   background-color:#242424
 }
+
+.point{
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: yellow;
+  position: absolute;
+  transform: translate(-50%,-50%);
+}
+
+.header{
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 2em;
+  display: flex;
+  gap: 1em;
+}
+
+.header button{
+  height: 3.5em;
+  padding:0 3em;
+  font-size: 1.2em;
+  font-weight: bold;
+  border-radius: 0.3em;
+  background-color: #fff;
+  color:#111;
+  cursor: pointer;
+}
